--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.4",
     "firebase": "^10.14.0",
+    "material-icons": "^1.13.12",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
